@@ -1,0 +1,23 @@
+#
+# Definition of custom hooks for atf-run.
+#
+# Uncomment any hooks that you want to override and add your own code
+# to them.  Some sample calls are included in them.  Be very careful
+# with what you print from here.
+#
+# See atf-run(1) for more details.
+#
+
+#info_start_hook()
+#{
+#    default_info_start_hook "${@}"
+#
+#    atf_tps_writer_info "extra.info" "An example"
+#}
+
+#info_end_hook()
+#{
+#    default_info_end_hook "${@}"
+#
+#    atf_tps_writer_info "extra.info" "An example"
+#}
